# jelford.github.io

./: .gitignore  .gitmodules  .index.html.swp  CNAME  Makefile  _cobalt.yml  _publish.sh  blog.html  blog.md  build.sh  code.code-workspace  compile_blog  config.toml  index.html  index.md  scripts  style.css
.github/workflows/: publish.yml
_defaults/: posts.md
_site/: blog.html  index.html  rss.xml
_site/assets/: style.css
_site/posts/: 2020-06-14-lindy-effect-in-software.html  lindy-effect-in-software.html
blog/: building_a_static_blog.html  building_a_static_blog.md  more_styling.html  more_styling.md  organising_blog_output_nicely.html  organising_blog_output_nicely.md  pandoc_html_template.html.template  styling_the_front_page.html  styling_the_front_page.md
chest/: index.html  style.css
content/: _index.md
content/blog/: 2020-07-18-by-any-other-name.md  _index.md
content/blog/2021-10-31-working-with-signals-in-rust-pt1-whats-a-signal/: Cargo.toml  index.md  main.rs  signalfd.c
docs/: CNAME  index.html  rss.xml  sitemap.xml
docs/blog/: index.html
githooks/pre-commit/: build-html
githooks/precommit/: build-html
js/: blog-highlights.js  highlight-worker.js  highlight.pack.js
posts/: 2020-06-14-lindy-effect-in-software.md  lindy-effect-in-software.md
public/: index.html  robots.txt  sitemap.xml
public/blog/: index.html
scripts/: onion-image-load.user.js
spool/: index.html
src/: blog.liquid  index.md
src/_includes/: goatcounter_scriptlet.liquid  (+1 more)
styles/: noscript.css
templates/: base.html  blog-page.html  blog.html  index.html
(+27 files in other folders)
