[package]
name = "example"
version = "0.1.0"
authors = ["James Elford <james.p.elford@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
signal-hook = "0.3"
crossbeam = "0.8"

[[bin]]
name = "example"
path = "main.rs"
